# mbrl-world-models-planning

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  tests.yml
artifacts/: replay_buffer.npz  reward_model.pt  rssm_model.pt  vae_buffer.npz  vae_buffer_fixed.npz  vae_buffer_fixed2.npz
artifacts/baseline_benchmark/: baseline_benchmark_report.md  baseline_benchmark_runs.csv
artifacts/evaluation/: evaluation_report.md
artifacts/full_loop/: reward_cycle_1.pt  reward_cycle_2.pt  rssm_cycle_1.pt  rssm_cycle_2.pt  system_metrics.csv
configs/: default.yaml
scripts/: benchmark_baselines.py  collect_data.py  collect_vae_data.py  evaluate.py  plan.py  smoke.py  train_reward.py  train_rssm.py  train_system.py  train_vae.py
src/mbrl/: __init__.py
src/mbrl/config/: __init__.py  base.py  env.py  model.py  planning.py  training.py
src/mbrl/data/: __init__.py  buffer.py  collection.py  dataset.py  image_collection.py  transforms.py
src/mbrl/envs/: __init__.py  gymnasium_env.py  pixel_env.py
src/mbrl/evaluation/: __init__.py  baselines.py  evaluator.py  metrics.py  visualization.py
src/mbrl/inference/: __init__.py
src/mbrl/models/: __init__.py  reward.py  rssm.py  vae.py
tests/integration/: test_smoke.py
tests/unit/: test_baseline_utils.py  test_buffer.py  test_config.py  test_data_collection.py  test_evaluation_metrics.py  test_planners.py  test_replay_sequences.py  test_reward.py  test_reward_trainer.py  test_rssm.py  test_rssm_trainer.py  test_system_metrics.py  test_vae.py  test_vae_trainer.py
(+16 files in other folders)
