[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbrl-world-models-planning"
version = "0.1.0"
description = "Production-grade model-based reinforcement learning system with world models and planning"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "MBRL Team" }]
dependencies = [
  "numpy>=1.26",
  "gymnasium>=1.0",
  "matplotlib>=3.9",
  "pygame>=2.6",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-PyYAML>=6.0.12",
]
baseline = [
  "stable-baselines3>=2.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
mypy_path = "src"

